--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
+    "ngx-cookie-service": "^16.0.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
