--- a/client/angular.json
+++ b/client/angular.json
@@ -26,11 +26,16 @@
             ],
             "styles": [
               
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
 
             ],
             "scripts": [
-           
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/popper.js/dist/umd/popper.min.js",
+                "node_modules/bootstrap/dist/js/bootstrap.min.js"
               ]
           },
           "configurations": {
