--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "^16.0.0",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
+    "jquery": "^3.7.1",
     "ngx-cookie-service": "^16.0.1",
+    "popper.js": "^1.16.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
