--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
